--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,10 +2,17 @@
     "env": {
         "browser": true,
         "es2021": true,
-        "node": true
+        "node": true,
+        "jasmine": true,
     },
     "extends": "airbnb-base",
     "overrides": [
+        {
+            "files": ["*.spec.js"],
+            "env": {
+                "jasmine": true
+            }
+        }
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
@@ -17,5 +24,8 @@
         "no-underscore-dangle": 0,
         "no-restricted-globals": 0,
         "linebreak-style": 0
-    }
+    },
+    "plugins": [
+        "jasmine"
+    ]
 }
